improve team status response with score and rank